--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -86,7 +86,7 @@
 						<a target="_blank" href="https://www.facebook.com/CLASSICNEETACADEMYSALEM/"><img src="https://img.icons8.com/fluency/48/000000/facebook.png" /></a>
 						<a target="_blank" href="https://www.instagram.com/classic_neet_academy/?hl=en"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /></a>
 						<a target="_blank" class="playstore1" href="https://play.google.com/store/apps/details?id=com.sixerclass.classicneet&hl=en_IN&gl=US"><img src="images/aboutus/download.jpg" style='width: 8vw; height: 5vh;margin: 0.8rem;'/></a>
-						<a target="_blank" class="playstore2" href="https://play.google.com/store/apps/details?id=com.sixerclass.classicneet&hl=en_IN&gl=US"><img src="images/home/playstore.png" ></a>
+						<a target="_blank" class="playstore2" href="https://play.google.com/store/apps/details?id=com.sixerclass.classicneet&hl=en_IN&gl=US"><img style="height: 45px;width: 45px;" src="https://img.icons8.com/color/48/000000/playstore.png" ></a>
 					</div>
 					
 				
