--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -41,7 +41,7 @@
 						style="width: 100%"
 						enctype="multipart/form-data"
 					>
-						<div class="input-group d-flex flex-nowrap" style="width: 80%">
+						<div class="input-group d-flex flex-nowrap mb-3" style="width: 80%">
 							<span class="input-group-text" id="addon-wrapping">Add Name</span>
 							<input
 								type="text"
@@ -50,7 +50,11 @@
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
+								required
 							/>
+						</div>
+						<div class="input-group d-flex flex-nowrap mb-3" style="width: 80%">
+							<span class="input-group-text" id="addon-wrapping">Add Image</span>
 							<input
 								type="file"
 								name="studentimg"
@@ -58,7 +62,11 @@
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
+								required
 							/>
+						</div>
+						<div class="input-group d-flex flex-nowrap" style="width: 80%">
+							<span class="input-group-text" id="addon-wrapping">Add collegeName</span>
 							<input
 								type="text"
 								name="collegeName"
@@ -66,15 +74,6 @@
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
-							/>
-							<input
-								type="number"
-								name="score"
-								class="form-control"
-								aria-label="Username"
-								aria-describedby="addon-wrapping"
-								id="uploadlink"
-								placeholder="score"
 							/>
 						</div>
 						<div>
