--- a/views/admin/chatbot/chatbot.ejs
+++ b/views/admin/chatbot/chatbot.ejs
@@ -65,7 +65,7 @@
               type="button"
               class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
             >
-              Empty Trash
+              Empty Response
             </button>
           </div>
         </form>
