--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -221,7 +221,7 @@
 
       <!-- <div class="btngrp"><div class="prev-btn btn" data-year="2019">Previous Year</div><div data-year="2020" class="current-btn btn">Next Year</div></div> -->
       <section class="galleryMain">
-        <% imgsArray[0].forEach((i)=> {%>
+        <!-- <% imgsArray[0].forEach((i)=> {%>
         <div class="galleryItem">
           <img
             id="imageid"
@@ -229,15 +229,15 @@
             alt=""
           />
         </div>
-        <% }) %>
-        <!-- <%# imgsArray[0].forEach(img => { %>
+        <% }) %> -->
+        <%# imgsArray[0].forEach(img => { %>
          
           <%# }) %> 
           
           <%# obj[2019].forEach(o => { %>
             
          
-        <%# }) %> -->
+        <%# }) %>
         
       </section>
 
@@ -254,6 +254,7 @@
     </section>
     <section class="app">
       <div class="apppage">
+        <!-- phone -->
         <img src="images/aboutus/phonebg.png" class="Messaging" />
         <h2>Get Our Learning<br />App</h2>
         <img src="images/aboutus/Vector2.png" class="vector3" />
