--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -28,7 +28,11 @@
 			<section class="Getyourvideos" style="  background: url('<%= img.sliderimg %>') center/cover;"> 
 
 			</section>
+			<div class="heading"> <h1>Demo Videos
+			</h1></div>
+			
 			<section class="gridcontainer">
+				
 				<div class="grid">
 					<% link.forEach((link,index)=> { %>
 						<div class="griditem">
