--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -1,3 +1,18 @@
+.dropdown {
+	width: 10%;
+	height: 40px;
+	cursor: pointer;
+	border-radius: 10px 0px 10px 0px;
+	position: relative;
+	background: linear-gradient(#4885e7, #19cae6);
+	/* border: 5px solid #568037; */
+	color: #000000;
+	text-align: center;
+	font-size: 16px;
+	font-weight: 600;
+	margin: 2rem 0rem 0rem 0rem;
+}
+
 .arrowRight {
 	height: 70px;
 	position: absolute;
