--- a/views/results.ejs
+++ b/views/results.ejs
@@ -53,6 +53,16 @@
 			</span>
 
 			<div class="gridcontainer">
+				<select
+				class="form-select form-select-lg mb-3 dropdown"
+				aria-label=".form-select-lg example"
+				data-select=""
+				>
+				
+				  <option value="">Select a category</option>
+				
+			
+			  </select>
 				<% students.forEach((student)=> { %>
 					<div class="griditem1 gridbox">
 						<div class="imgDesign">
