--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -76,6 +76,8 @@
                 aria-label="Score"
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
+                min="1"
+                max="720"
               />
             </div>
             <div class="input-group flex-nowrap" style="width: 80%">
