--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -32,6 +32,11 @@
 		<section class="mainsection">
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right" style="height: fit-content">
+				<select class="form-select" aria-label="Default select example">
+					<%# year.forEach(e => { %>
+						<option value="<%# e %> "><%# e %> </option>
+					<%# }) %>
+				  </select>
 				<div class="preview">
 					<h1 class="mb-5">Student Details</h1>
 					<form
@@ -74,6 +79,19 @@
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
+							/>
+						</div>
+						<div class="input-group d-flex flex-nowrap" style="width: 80%">
+							<span class="input-group-text" id="addon-wrapping">Add Year</span>
+							<input
+								type="number"
+								name="Year"
+								class="form-control"
+								aria-label="Username"
+								aria-describedby="addon-wrapping"
+								id="uploadlink"
+								min="2010"
+                				max="2030"
 							/>
 						</div>
 						<div>
@@ -168,6 +186,7 @@
 								<th scope="col">Image</th>
 								<th scope="col">College Name</th>
 								<th scope="col">Update</th>
+								<th scope="col">Year</th>
 								<th scope="col">Edit</th>
 							</tr>
 						</thead>
