--- a/views/results.ejs
+++ b/views/results.ejs
@@ -45,6 +45,16 @@
 		</section>
 
 		<section class="section2">
+			<select
+				class="form-select form-select-lg mb-3 dropdown"
+				aria-label=".form-select-lg example"
+				data-select=""
+				>
+				
+				  <option value="">2020</option>
+				
+			
+			  </select>
 			<span class="arrowRight">
 
 			</span>
@@ -53,16 +63,7 @@
 			</span>
 
 			<div class="gridcontainer">
-				<select
-				class="form-select form-select-lg mb-3 dropdown"
-				aria-label=".form-select-lg example"
-				data-select=""
-				>
 				
-				  <option value="">Select a category</option>
-				
-			
-			  </select>
 				<% students.forEach((student)=> { %>
 					<div class="griditem1 gridbox">
 						<div class="imgDesign">
@@ -87,64 +88,48 @@
 						><h3 class="nameStudent"></h3>
 						<p class="scoreStudent"></p
 					></span>
-				</div>
+				</div> -->
 				<div class="griditem1 gridbox">
-					<img class="imgTopper" src="" />
+					<div class="imgDesign">
+							
+						<img class="imgTopper" src="../images/Result/image5.png" />
+					</div>
 					<span class="griditem1span"
-						><h3 class="nameStudent"></h3>
-						<p class="scoreStudent"></p
+						><h3 class="nameStudent">Shivanii</h3>
+						<p class="scoreStudent">Chennai Institute Of Technology</p
 					></span>
 				</div>
-				<div class="griditem1 gridbox">
-					<img class="imgTopper" src="" />
+				<div class="griditem1 gridbox idea2">
+					<div class="imgDesign">
+							
+						<img class="imgTopper" src="../images/Result/image4.png" />
+					</div>
 					<span class="griditem1span"
-						><h3 class="nameStudent"></h3>
-						<p class="scoreStudent"></p
+						><h3 class="nameStudent i2name">Shivanii</h3>
+						<p class="scoreStudent i2clg">Chennai Institute Of Technology</p
 					></span>
 				</div>
-				<div class="griditem1 gridbox">
-					<img class="imgTopper" src="" />
-
+				<div class="griditem1 gridbox idea3">
+					<div class="imgDesign">
+							
+						<img class="imgTopper" src="../images/Result/image3.png" />
+					</div>
 					<span class="griditem1span"
-						><h3 class="nameStudent"></h3>
-						<p class="scoreStudent"></p
+						><h3 class="nameStudent i2name">Shivanii</h3>
+						<p class="scoreStudent i2clg">Chennai Institute Of Technology</p
 					></span>
 				</div>
-				<div class="griditem1 gridbox">
-					<img class="imgTopper" src="" />
+				<div class="griditem1 gridbox idea4">
+					<div class="imgDesign">
+							
+						<img class="imgTopper" src="../images/Result/image3.png" />
+					</div>
 					<span class="griditem1span"
-						><h3 class="nameStudent"></h3>
-						<p class="scoreStudent"></p
+						><h3 class="nameStudent i2name">Shivanii</h3>
+						<p class="scoreStudent i2clg">Chennai Institute Of Technology</p
 					></span>
 				</div>
-				<div class="griditem1 gridbox">
-					<img class="imgTopper" src="" />
-					<span class="griditem1span"
-						><h3 class="nameStudent"></h3>
-						<p class="scoreStudent"></p
-					></span>
-				</div>
-				<div class="griditem1 gridbox">
-					<img class="imgTopper" src="" />
-					<span class="griditem1span"
-						><h3 class="nameStudent"></h3>
-						<p class="scoreStudent"></p
-					></span>
-				</div>
-				<div class="griditem1 gridbox">
-					<img class="imgTopper" src="" />
-					<span class="griditem1span"
-						><h3 class="nameStudent"></h3>
-						<p class="scoreStudent"></p
-					></span>
-				</div>
-				<div class="griditem1 gridbox">
-					<img class="imgTopper" src="" />
-					<span class="griditem1span"
-						><h3 class="nameStudent"></h3>
-						<p class="scoreStudent"></p
-					></span>
-				</div>-->
+				
 				
 			</div> 
 			<div class="pagination">
