--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -10,7 +10,10 @@
 	text-align: center;
 	font-size: 16px;
 	font-weight: 600;
-	margin: 2rem 0rem 0rem 0rem;
+	margin-bottom: 2rem;
+	left: 50%;
+	transform: translateX(-50%);
+	
 }
 
 .arrowRight {
@@ -88,35 +91,39 @@ body.dark .chat {
 
 }
 .imgDesign {
-	background: url(../images/Result/resultsimg) center/cover;
+	background: url(../images/Result/des2.png) center/cover;
 	width: 100%;
 	height: 70%;
+	right:2%;
 	background-size: 100%;
 	background-repeat: no-repeat;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	position: relative;
+	
 }
 .imgDesign img {
-	width:48%;
+	width:60%;
+	height: 70%;
 	border-radius: 50%;
-	margin-bottom: .8rem;
+	margin-top: 1rem;
+	margin-left: .8rem;
 
 }
 .gridbox {
 	position: relative;
-	height: 22rem;
+	height: 24rem;
 	width:18rem;
 
 	
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
-	/* box-shadow: 2px 2px 50px rgb(0,0,0,0.4); */
-	border-radius: 10px;
-	background-color: #4E6B93;
+	justify-content: flex-start;
+	/* box-shadow: 2px 2px 50px rgb(0,0,0,0.4);    */
+	/* border-radius: 10px;   #4E6B93*/
+	background-color:transparent;
 
 	/* -webkit-box-reflect: below 0 linear-gradient(transparent, white); */
 }
@@ -187,12 +194,50 @@ body.dark .chat {
 	justify-content: center;
 	align-items: center;
 }
-
+.gridbox > span > p {
+	position: absolute;
+	top: 90%;
+	padding: 0.5rem 1rem;
+	border-radius: 50px;
+	transition: .1s ease-in-out;
+	/* color: black; */
+}
 .gridbox > span > h3 {
 	font-size: 1.3rem;
 	text-align: center;
 	font-weight: 600;
-	color: rgb(255, 255, 255);
+	color: rgb(0, 0, 0);
+	
+	position: absolute;
+	border-radius: 50px;
+	padding: 0.5rem 1rem;
+	top: 75%;
+	transition: .1s ease-in-out;
+}
+.i2name {
+	top: 70% !important;
+}
+.i2clg {
+	top: 80% !important;
+}
+.gridbox > span > h3:hover {
+	outline: 5px solid #FCEA0D;
+	padding: 0.5rem 1rem;
+}
+.gridbox > span > p:hover {
+	outline: 5px solid #FCEA0D;
+}
+.idea2 {
+	background-color: #9C19E0;
+	border-radius: 10px;
+}
+.idea3 {
+	background-color: #69DADB;
+	border-radius: 10px;
+}
+.idea4 {
+	background-color: #E05D5D;
+	border-radius: 10px;
 }
 body.dark .gridbox > span > h3 {
 	color: rgb(255, 255, 255);
