--- a/views/404error.ejs
+++ b/views/404error.ejs
@@ -9,8 +9,10 @@
 </head>
 <body>
     <section class="error">
-        <div class="bg">
-            <img src='images/home/404error.png' alt="">
+        <!-- <div class="bg">
+        </div> -->
+        <div class="box">
+            <img src="images/home/box.png" alt="">
         </div>
         <div class="logo">
             <img src="images/home/classic-nee-tacademy-logo.png" alt="">
