--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -115,6 +115,16 @@ tbody {
 	align-items: center;
 	transition: all 0.5s ease;
 }
+.preview3 {
+	position: absolute;
+	height: 80%;
+	width: 80%;
+	transform: translate(300vw, 0);
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	transition: all 0.5s ease;
+}
 
 .preview img {
 	justify-content: center;
