--- a/views/results.ejs
+++ b/views/results.ejs
@@ -99,36 +99,95 @@
 						<p class="scoreStudent">Chennai Institute Of Technology</p
 					></span>
 				</div>
-				<div class="griditem1 gridbox idea2">
+
+				<div class="griditem1 gridbox">
 					<div class="imgDesign">
 							
-						<img class="imgTopper" src="../images/Result/image4.png" />
+						<img class="imgTopper" src="../images/Result/image5.png" />
 					</div>
 					<span class="griditem1span"
-						><h3 class="nameStudent i2name">Shivanii</h3>
-						<p class="scoreStudent i2clg">Chennai Institute Of Technology</p
+						><h3 class="nameStudent">Shivanii</h3>
+						<p class="scoreStudent">Chennai Institute Of Technology</p
 					></span>
 				</div>
-				<div class="griditem1 gridbox idea3">
+
+				<div class="griditem1 gridbox">
 					<div class="imgDesign">
 							
-						<img class="imgTopper" src="../images/Result/image3.png" />
+						<img class="imgTopper" src="../images/Result/image5.png" />
 					</div>
 					<span class="griditem1span"
-						><h3 class="nameStudent i2name">Shivanii</h3>
-						<p class="scoreStudent i2clg">Chennai Institute Of Technology</p
+						><h3 class="nameStudent">Shivanii</h3>
+						<p class="scoreStudent">Chennai Institute Of Technology</p
 					></span>
 				</div>
-				<div class="griditem1 gridbox idea4">
+
+				<div class="griditem1 gridbox">
 					<div class="imgDesign">
 							
-						<img class="imgTopper" src="../images/Result/image3.png" />
+						<img class="imgTopper" src="../images/Result/image5.png" />
 					</div>
 					<span class="griditem1span"
-						><h3 class="nameStudent i2name">Shivanii</h3>
-						<p class="scoreStudent i2clg">Chennai Institute Of Technology</p
+						><h3 class="nameStudent">Shivanii</h3>
+						<p class="scoreStudent">Chennai Institute Of Technology</p
 					></span>
 				</div>
+
+				<div class="griditem1 gridbox">
+					<div class="imgDesign">
+							
+						<img class="imgTopper" src="../images/Result/image5.png" />
+					</div>
+					<span class="griditem1span"
+						><h3 class="nameStudent">Shivanii</h3>
+						<p class="scoreStudent">Chennai Institute Of Technology</p
+					></span>
+				</div>
+
+				<div class="griditem1 gridbox">
+					<div class="imgDesign">
+							
+						<img class="imgTopper" src="../images/Result/image5.png" />
+					</div>
+					<span class="griditem1span"
+						><h3 class="nameStudent">Shivanii</h3>
+						<p class="scoreStudent">Chennai Institute Of Technology</p
+					></span>
+				</div>
+
+				<div class="griditem1 gridbox">
+					<div class="imgDesign">
+							
+						<img class="imgTopper" src="../images/Result/image5.png" />
+					</div>
+					<span class="griditem1span"
+						><h3 class="nameStudent">Shivanii</h3>
+						<p class="scoreStudent">Chennai Institute Of Technology</p
+					></span>
+				</div>
+
+				<div class="griditem1 gridbox">
+					<div class="imgDesign">
+							
+						<img class="imgTopper" src="../images/Result/image5.png" />
+					</div>
+					<span class="griditem1span"
+						><h3 class="nameStudent">Shivanii</h3>
+						<p class="scoreStudent">Chennai Institute Of Technology</p
+					></span>
+				</div>
+
+				<div class="griditem1 gridbox">
+					<div class="imgDesign">
+							
+						<img class="imgTopper" src="../images/Result/image5.png" />
+					</div>
+					<span class="griditem1span"
+						><h3 class="nameStudent">Shivanii</h3>
+						<p class="scoreStudent">Chennai Institute Of Technology</p
+					></span>
+				</div>
+				
 				
 				
 			</div> 
