--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -254,15 +254,21 @@
 		<section class="app">
 			<div class="apppage">
 				<!-- phone -->
-				<img src="images/aboutus/phonebg.png" class="Messaging" />
-				<h2>Get Our Learning<br />App</h2>
+				<div class="appLeft">
+					<img src="images/aboutus/phonebg.png" class="Messaging" />
+
+				</div>
 				<img src="images/aboutus/Vector2.png" class="vector3" />
-				<img src="images/aboutus/Vector1.png" class="Vector2" />
-				<img src="images/aboutus/Vector.png" class="vector1" />
+				<div class="appRight">
+					<h2>Get Our Learning<br />App</h2>
+					<!-- <img src="images/aboutus/Vector1.png" class="Vector2" /> 
+					<img src="images/aboutus/Vector.png" class="vector1" />  -->
 				<a
 					href="https://play.google.com/store/apps/details?id=com.sixerclass.classicneet&hl=en_IN&gl=US"
 					><img src="images/aboutus/download.jpg"
-				/></a>
+				/></a> 
+				</div>
+				
 			</div>
 			<!-- <div class="apppage1">
         <img src="images/aboutus/phonebg.png" class="Messaging" />
