--- a/public/stylesheets/successStories2.css
+++ b/public/stylesheets/successStories2.css
@@ -117,6 +117,13 @@ body.dark .chat {
 		grid-template-columns: repeat(1, 1fr);
 	}
 }
+@media (max-width: 600px) {
+	.vector h1 {
+		font-size: 1.5rem;
+	}
+}
+	
+
 @media (max-width: 500px) {
 	.cardMain {
 		margin-top: 3rem;
