--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -6,6 +6,10 @@ body.dark .nav-toggler span::after {
 	background-color: white !important;
 }
 
+body.dark .nav-toggler.toggler-open span {
+	background-color: transparent !important;
+}
+
 nav {
 	background-color: #fff;
 	height: 4rem;
@@ -14,8 +18,8 @@ nav {
 .nav2 {
 	display: flex;
 	align-items: center;
-  justify-content: center;
-  /* width: 35%; */
+	justify-content: center;
+	/* width: 35%; */
 }
 /* navbar regular css start */
 .navbar-area {
@@ -151,7 +155,6 @@ a.site-logo {
 		transform: translateY(5px);
 	}
 
-
 	.container {
 		max-width: 720px;
 	}
@@ -202,9 +205,9 @@ a.site-logo {
 		margin-bottom: 15px;
 	}
 	/* navbar css for mobile end */
-  .nav2 {
-    width: 35%;
-  }
+	.nav2 {
+		width: 35%;
+	}
 }
 
 /* mobile breakpoint start */
@@ -212,9 +215,9 @@ a.site-logo {
 	nav {
 		height: 6rem;
 	}
-  .nav2 {
-    width: 40%;
-  }
+	.nav2 {
+		width: 40%;
+	}
 	a.site-logo {
 		width: 10rem;
 	}
