--- a/public/stylesheets/demovideos.css
+++ b/public/stylesheets/demovideos.css
@@ -29,14 +29,15 @@ body.dark .chat {
 
 .grid {
   position: relative;
-  width: 100%;
+  width: 90%;
   /* border: 1px solid black; */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-content: center;
+  justify-items: center;
   align-items: center;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-left: auto;
+  margin-right: auto;
+
 }
 .heading h1{
   text-align: center;
@@ -47,12 +48,29 @@ iframe {
   z-index: 4;
 }
 .griditem {
-  width: 28rem;
+  width: 90%;
   height: 15rem;
   padding: 0.5rem;
   border: 15px solid #02c3d8;
   margin: 25px;
   border-radius: 20px 0px 20px 0px;
+}
+/* demovideos  */
+.gridbox {
+  border-radius: 14px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;
+  border-radius: 30px 0 30px 0;
+}
+
+.video
+{
+  width: 100%;
+  height: 100%;
 }
 @media (max-width: 1100px) {
   .grid {
@@ -74,26 +92,7 @@ iframe {
     grid-template-columns: repeat(1, 1fr);
 
   }
-  .griditem{
-    margin: 0;
-  }
+ 
   
 
-}
-/* demovideos  */
-.gridbox {
-  border-radius: 14px;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: white;
-  border-radius: 30px 0 30px 0;
-}
-
-.video
-{
-  width: 100%;
-  height: 100%;
 }
