--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -22,10 +22,11 @@
 	<%- include('./layout/header') %>
 		<%- include('./chatbot') %>
 			<section class="secMain">
-				<div class="vector">
+				<!-- <div class="vector">
 					<h1>Student Testimonials</h1>
-				</div>
-				<!-- <img class="vector" src="../images/successStories/Vector8.png" alt="" /> -->
+				</div> -->
+				<img class="headerPic"  src="../images/successStories/Vector8.png" alt="" />
+				<h1 class="studentHeader">Student Testimonials</h1>
 				<div class="cardMain">
 					<% students.forEach((student)=> { %>
 						<div class="card">
