--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -10,7 +10,7 @@
 	text-align: center;
 	font-size: 16px;
 	font-weight: 600;
-	margin-bottom: 2rem;
+	margin: 2rem 0rem;
 	left: 50%;
 	transform: translateX(-50%);
 	
@@ -48,7 +48,7 @@
 
 .swiper {
 	width: 100%;
-	height: 100vh;
+	height: calc(100vh - 4rem);
 }
 body {
 	background-color: EEEEEE;
@@ -64,7 +64,7 @@ body.dark .chat {
 }
 
 .swiper-slide img {
-	height: 90vh;
+	height: 100%;
 	width: 100%;
 }
 
@@ -308,9 +308,16 @@ body.dark .gridbox > span > h3 {
 	
 
 @media (max-width: 800px) {
+	.dropdown {
+		width: 20%;
+	}
+	.swiper {
+		height: 70vh;
+	}
 	.swiper-slide img {
-		object-fit: cover;
-		background-position: center;
+		
+		width: 100%;
+		height: 100%;
 	}
 	.gridcontainer {
 		
@@ -318,6 +325,9 @@ body.dark .gridbox > span > h3 {
 	}
 }
 @media (max-width:700px) {
+	.swiper {
+		height: 60vh;
+	}
 	.gridbox {
 		height: 18rem;
 		width:14rem;	
@@ -327,6 +337,9 @@ body.dark .gridbox > span > h3 {
 	}
 }
 @media (max-width: 600px) {
+	.swiper {
+		height: 40vh;
+	}
 
 	.pagination li {
 		margin: 1rem 0.5rem;
@@ -341,6 +354,9 @@ body.dark .gridbox > span > h3 {
 	
 }
 @media (max-width: 450px) {
+	.swiper {
+		height: 30vh;
+	}
 	.gridbox {
 		height: 14rem;
 		width:10rem;	
