--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -25,8 +25,8 @@
 	<%- include('./layout/header') %>
 		<%- include('./chatbot') %>
 
-			<section class="Getyourvideos" style="  background: url('<%= img.sliderimg %>') center/cover;"> 
-
+			<section class="Getyourvideos"> 
+				<img src="<%= img.sliderimg %>" alt="">
 			</section>
 			<div class="heading"> <h1>Demo Videos
 			</h1></div>
