--- a/public/stylesheets/coursesNEET.css
+++ b/public/stylesheets/coursesNEET.css
@@ -696,7 +696,7 @@ body.dark .enroll:hover {
 	.methodology4 {
 		background-color: white;
 		width: 80%;
-		height: 450px;
+		height: 70%;
 		padding: 1rem;
 		border-radius: 20px;
 		position: relative;
