--- a/views/results.ejs
+++ b/views/results.ejs
@@ -71,7 +71,7 @@
 						</div>
 						<span class="griditem1span"
 							><h3 class="nameStudent"><%= student.name %></h3>
-							<p class="scoreStudent"><%= student.score %></p
+							<p class="scoreStudent"><%= student.collegename %></p
 						></span>
 					</div>
 				<!-- <div
