--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1516,7 +1516,10 @@ iframe {
 	background: black;
 	color: white;
 }
-
+body.dark .read:hover {
+	background: white;
+	color: black;
+}
 iframe {
 	border-radius: 30px 0 30px 0;
 }
