--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -127,9 +127,7 @@ body.dark .chat {
 
 	/* -webkit-box-reflect: below 0 linear-gradient(transparent, white); */
 }
-.nameStudent {
-	padding: .5rem;
-}
+
 .scoreStudent {
 	font-size: 1.1rem;
 	text-align: center;
@@ -196,6 +194,7 @@ body.dark .chat {
 }
 .gridbox > span > p {
 	color: black;
+	font-size: 1.3rem;
 }
 .gridbox > span > h3 {
 	font-size: 1.3rem;
@@ -335,6 +334,9 @@ body.dark .gridbox > span > h3 {
 	.gridbox > span > h3 {
 		font-size: 1rem;
 	}
+	.gridbox > span > p {
+		font-size: 1rem;
+	}
 }
 @media (max-width: 600px) {
 	
@@ -348,10 +350,17 @@ body.dark .gridbox > span > h3 {
 		font-size: 13px;
 	}
 	.gridbox {
-		height: 16rem;
-		width:12rem;	
+		height: 15rem;
+		width:11rem;	
 	}
-	
+	.gridbox > span > h3 {
+		font-size: 0.8rem;
+		padding: .3rem;
+	}
+	.gridbox > span > p {
+		font-size: 0.8rem;
+		padding: .3rem;
+	}
 	
 }
 @media (max-width: 450px) {
@@ -362,6 +371,22 @@ body.dark .gridbox > span > h3 {
 		height: 14rem;
 		width:10rem;	
 	}
+}
+@media (max-width: 400px) {
+	.gridcontainer {
+		grid-row-gap: 1rem;
+	}
+	.gridbox {
+		height: 12rem;
+		width:8rem;	
+	}
+	.gridbox > span > h3 {
+		font-size: 0.7rem;
+	}
+	.gridbox > span > p {
+		font-size: 0.7rem;
+	}
+	
 }
 
 
