--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -2134,6 +2134,9 @@ iframe {
 		height: 1px !important;
 		width: 1px !important;
 	}
+	.swipTop .swiper-slide {
+		height: 20rem!important;
+	}
 }
 @media (max-width: 500px) {
 	.cardsDiv {
