--- a/views/home.ejs
+++ b/views/home.ejs
@@ -94,8 +94,8 @@
 						<div class="div-2">
 							<h1 class="div-2-title">Latest Updates</h1>
 
-							<marquee class="news-box" direction="up" scrollamount="5" onmousedown="stop();"
-								onmouseup="start();">
+							<marquee class="news-box" direction="up" scrollamount="5" onmouseover="this.stop();"
+								onmouseout="this.start();">
 								<% latestupdates.forEach(update=> { %>
 									<span class="p">
 										<%= update.link %>
